--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,4 @@ PGHOST=ep-nameless-heart-a584rjwe.us-east-2.aws.neon.tech
 PGDATABASE=museumdb
 PGPASSWORD=jnQBV3F8wyMG
 PGPort=5432
-DATABASE_URL='postgresql://museumdb_owner:jnQBV3F8wyMg@ep-nameless-heart-a584rjwe.us-east-2.aws.neon.tech/museumdb?sslmode=require'
+DATABASE_URL="postgresql://museumdb_owner:jnQBV3F8wyMG@ep-nameless-heart-a584rjwe.us-east-2.aws.neon.tech/museumdb"
