--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PGUSER=museumdb_owner
 PGHOST=ep-nameless-heart-a584rjwe.us-east-2.aws.neon.tech
 PGDATABASE=museumdb
-PGPASSWORD=jnQBV3F8wyMG
+PGPASSWORD=jnQBV3F8wyMg
 PGPort=5432
-DATABASE_URL="postgresql://museumdb_owner:jnQBV3F8wyMG@ep-nameless-heart-a584rjwe.us-east-2.aws.neon.tech/museumdb"
+DATABASE_URL="postgresql://museumdb_owner:jnQBV3F8wyMg@ep-nameless-heart-a584rjwe.us-east-2.aws.neon.tech/museumdb?sslmode=require"
