--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "somerville-museum",
   "version": "0.1.0",
@@ -11,16 +10,18 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.1",
-    "next": "^14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "next": "^14.2.15",
+    "pg": "^8.13.1",
+    "react": "^18",
     "react-bootstrap": "^2.10.5",
-    "react-scripts": "5.0.1",
+    "react-dom": "^18",
+    "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.6",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
