--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,5 @@ PGDATABASE=museumdb
 PGPASSWORD=jnQBV3F8wyMG
 PGPort=5432
 DATABASE_URL='postgresql://museumdb_owner:jnQBV3F8wyMg@ep-nameless-heart-a584rjwe-pooler.us-east-2.aws.neon.tech/museumdb?sslmode=require'
+
+#random crap
