--- a/.github/.env
+++ b/.github/.env
@@ -5,4 +5,4 @@ PGPASSWORD=jnQBV3F8wyMG
 PGPort=5432
 DATABASE_URL='postgresql://museumdb_owner:jnQBV3F8wyMg@ep-nameless-heart-a584rjwe-pooler.us-east-2.aws.neon.tech/museumdb?sslmode=require'
 
-# even more random crap, will work this time please
+# even more random crap
