--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.6",
     "uuid": "^10.0.0",
+    "vercel": "^37.14.0",
     "web-vitals": "^2.1.4"
   }
 }
