--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 frontend/node_modules
 frontend/.next
@@ -11,8 +9,8 @@ frontend/.next
 /coverage
 
 # next.js
-/.next/
-/out/
+frontend/.next/
+frontend/out/
 
 # production
 /build
@@ -28,6 +26,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 frontend/.env
 
 # vercel
