--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1692.0",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -27,5 +28,8 @@
     "uuid": "^10.0.0",
     "vercel": "^37.14.0",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "wrangler": "^3.91.0"
   }
 }
