--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,7 @@ name: Vercel Production Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
 on:
   push:
     branches:
@@ -10,11 +11,20 @@ jobs:
   prod-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           cache: "npm"
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+
+      - name: Verify Frontend Directory
+        run: |
+          if [ ! -d "frontend" ]; then
+            echo "Error: frontend directory not found."
+            exit 1
+          fi
+
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }} --cwd=frontend
+        run: npx vercel@latest deploy --prod --token=$VERCEL_TOKEN --cwd=frontend --prebuilt
