--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,8 @@ jobs:
         with:
           cache: "npm"
 
+      - name: Install Dependencies
+        run: npm install --prefix frontend
+
       - name: Deploy Project Artifacts to Vercel
-        run: npx vercel@latest deploy --prod --token=$VERCEL_TOKEN --cwd=frontend --prebuilt
+        run: npx vercel@latest deploy --prod --token=$VERCEL_TOKEN --cwd=frontend
