--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "next": "^14.2.18",
     "pg": "^8.13.1",
+    "primereact": "^10.9.2",
     "random": "^5.1.1",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
