age, gender buttons

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "dotenv": "^16.4.5",
     "next": "^14.2.18",
     "pg": "^8.13.1",
+    "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
     "random": "^5.1.1",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
     "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "reactjs-popup": "^2.0.6",
     "uuid": "^10.0.0",
     "vercel": "^37.14.0",
