--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "i": "^0.3.7",
-    "next": "^14.2.23",
+    "next": "^15.2.0-canary.33",
     "pg": "^8.13.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
