--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "i": "^0.3.7",
-    "next": "^15.2.0-canary.33",
+    "next": "^15.1.6",
     "pg": "^8.13.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
     "random": "^5.1.1",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
     "reactjs-popup": "^2.0.6",
