comdensed api calls using cases
- some known errors
- super janky solution (sorry)

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,7 @@
 {
         "crons": [
           {
-            "path": "/api/overdue.js",
+            "path": "/api/borrowManagement?action=overdue.js",
             "schedule": "0 0 * * *"
           }
         ]
