--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,11 @@
     "clerk": "^0.8.3",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
+    "dot-case": "^3.0.4",
     "dotenv": "^16.4.5",
     "i": "^0.3.7",
-    "node-mailjet": "^6.0.6",
     "next": "^15.0.0",
+    "node-mailjet": "^6.0.6",
     "pg": "^8.13.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
