--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,5 +37,8 @@
     "uuid": "^10.0.0",
     "vercel": "^37.14.0",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "eslint-config-next": "15.2.1"
   }
 }
