--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,8 @@
     "reactjs-popup": "^2.0.6",
     "uuid": "^10.0.0",
     "vercel": "^37.14.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint-config-next": "15.2.1"
